--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ description: "Thinking will not overcome fear but action will."
         <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; 上一页</a>
     </li>
     {% endif %}
+	 <li class="page_number">Page: {{ paginator.page }} of {{ paginator.total_pages }}</li>
     {% if paginator.next_page %}
     <li class="next">
         <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">下一页 &rarr;</a>
